--- a/ass.css
+++ b/ass.css
@@ -1,6 +1,9 @@
-body{
+*{
     padding: 0;
     margin: 0;
+}
+body{
+    height: fit-content;
 }
 nav{
     width: 100%;
@@ -9,32 +12,48 @@ nav{
     background-color: white;
     justify-content: space-around;
     align-items: center;
+    position: relative;
+    margin: 0 auto;
 }
 nav h1{
-    padding-left: 50px;
+    font-size: 50px;
+    font-family: sans-serif;
 }
 ul{
+    display: flex;
     padding-left: 200px;
+    transition: all 1s ease-in-out;
 }
-ul li{
-    display: inline-block;
-    padding-right: 20px;
+li{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
 }
-ul li a{
-    text-decoration: none;
-    color: black;
-}
-ul li a:hover{
+li:hover{
     text-decoration: none;
     color: rgb(0, 255, 135);
 }
-nav button{
+.btn{
     border: none;
     border-radius: 5px;
     color: white;
+    align-items: center;
+    justify-content: center;
     background-color:  rgb(0, 255, 135);
-    width: 150px;
-    height: 35px;
+    width: 100px;
+    height: 20px;
+    margin-left: 50px;
+}
+.resp{
+    width: 30px;
+    height: 30px;
+    background-color: rgb(0, 255, 135);
+    display: none;
+}
+.close{
+    border-radius: 50%;
+    display: none;
 }
 .main{
     background-color: aliceblue;
@@ -96,4 +115,96 @@ img{
     border-radius: 10px;
     top: 50px;
     right: 250px;
+}
+@media screen and (max-width: 500px) {
+    *{
+        padding: 0;
+        margin: 0;
+    }
+    body{
+        padding: 0;
+        margin: 0;
+        height: fit-content;
+    }
+    nav{
+        width: 100%;justify-content: space-between;
+    }
+    nav h1{
+        font-size: 50px;
+        font-family: sans-serif;
+    }
+    ul{
+        width: 100%;
+        display: block;
+        position: absolute;
+        top: 60px;
+        z-index: 5;
+        background-color: white;
+        margin: 0;
+        padding: 0;
+        text-align: center;
+        margin-top: -300px;
+    }
+    li{
+        width: 100%;
+        display: block;
+        height: 30px;
+        margin: 0;
+    }
+    li:hover{
+        background-color: rgb(0, 255, 135);
+        color: white;
+    }
+    .btn{
+        width: 100%;
+        margin: 0;
+        border-radius: 0;
+    }
+    .resp{
+        display: block;
+    }
+    .close{
+        display: none;
+    }
+    .main{
+        width: 100%;
+        height: fit-content;
+        display: block;
+        padding: 0;
+        margin: 0;
+    }
+    .container1{
+        width: 100%;
+        height: fit-content;
+        display: block;
+        padding: 0;
+        margin: 0;
+    }
+    .sub1{
+        display: block;
+        width: 100%;
+        height: 350px;
+        padding: 0;
+        margin: 5px;
+    }
+    .sub1 button{
+        margin-top: 20px;
+    }
+    .container2{
+        display: block;
+        width: 100%;
+        height: 200px;
+        padding: 0;
+        margin: 0;
+    }
+    img{
+        display: block;
+        margin: 0;
+        padding: 0;
+        position: absolute;
+        top: 250px;
+        left: 15%;
+        width: 70%;
+        height: 250px;
+    }
 }
