--- a/css/ass.css
+++ b/css/ass.css
@@ -46,13 +46,13 @@ li:hover{
     margin-left: 50px;
 }
 .resp{
-    width: 30px;
+    /* width: 30px;
     height: 30px;
-    background-color: rgb(0, 255, 135);
+    background-color: rgb(0, 255, 135); */
     display: none;
 }
 .close{
-    border-radius: 50%;
+    /* border-radius: 50%; */
     display: none;
 }
 .main{
@@ -164,7 +164,7 @@ img{
     }
     .resp{
         display: block;
-        margin-right: 50px;
+        margin-right: 30px;
     }
     .close{
         display: none;
