--- a/css/ass.css
+++ b/css/ass.css
@@ -123,7 +123,7 @@ img{
     }
     body{
         padding: 0;
-        margin: 0;
+        margin: 5px;
         height: fit-content;
     }
     nav{
