--- a/css/ass.css
+++ b/css/ass.css
@@ -123,13 +123,12 @@ img{
     }
     body{
         padding: 0;
-        margin: 5px;
+        margin: 0;
         height: fit-content;
     }
     nav{
         width: 100%;
         justify-content: space-between;
-        box-shadow: 0px 0px 5px ;
     }
     nav h1{
         font-size: 50px;
@@ -146,15 +145,13 @@ img{
         margin: 0;
         padding: 0;
         text-align: center;
-        margin-top: -400px;
+        margin-top: -300px;
     }
     li{
         width: 100%;
         display: block;
         height: 30px;
         margin: 0;
-        border-bottom: 1px solid black;
-        border-top: 1px solid black;
     }
     li:hover{
         background-color: rgb(0, 255, 135);
