--- a/css/ass.css
+++ b/css/ass.css
@@ -181,7 +181,7 @@ img{
         height: fit-content;
         display: block;
         padding: 0;
-        margin: 0;
+        margin-top: 10px;
     }
     .sub1{
         display: block;
