--- a/css/ass.css
+++ b/css/ass.css
@@ -9,11 +9,11 @@ nav{
     width: 100%;
     height: 75px;
     display: flex;
-    background-color: white;
     justify-content: space-around;
     align-items: center;
     position: relative;
     margin: 0 auto;
+    box-shadow: 0px 2px 1px 2px aliceblue;
 }
 nav h1{
     font-size: 50px;
@@ -44,6 +44,8 @@ li:hover{
     width: 100px;
     height: 20px;
     margin-left: 50px;
+}.btn:hover{
+    color: white;
 }
 .resp{
     /* width: 30px;
@@ -55,8 +57,16 @@ li:hover{
     /* border-radius: 50%; */
     display: none;
 }
+.theme{
+    display: flex;
+}
+.theme1{
+    display: none;
+}
+.on{
+    display: none;
+}
 .main{
-    background-color: aliceblue;
     width: 100%;
     height: 85vh;
     display: flex;
@@ -64,7 +74,6 @@ li:hover{
     /* clip-path: polygon(50% 0%, 100% 0%, 100% 100%, 50% 100% ); */
 }
 .container1{
-    background-color: white;
     width: 100%;
     height: 84.5vh;
     margin-top: 10px;
@@ -103,6 +112,7 @@ li:hover{
     background-color:  rgb(0, 255, 135);
     width: 100px;
     height: 35px;
+    margin-top: 10px;
 }
 .dark{
     background-color: hsl(10, 10%, 10%);
@@ -142,20 +152,17 @@ img{
         top: 60px;
         z-index: 5;
         background-color: white;
+        color: black;
         margin: 0;
         padding: 0;
         text-align: center;
-        margin-top: -300px;
+        margin-top: -400px;
     }
     li{
         width: 100%;
         display: block;
         height: 30px;
         margin: 0;
-    }
-    li:hover{
-        background-color: rgb(0, 255, 135);
-        color: white;
     }
     .btn{
         width: 100%;
@@ -181,7 +188,7 @@ img{
         height: fit-content;
         display: block;
         padding: 0;
-        margin-top: 10px;
+        margin-top: 30px;
     }
     .sub1{
         display: block;
@@ -209,5 +216,14 @@ img{
         left: 15%;
         width: 70%;
         height: 250px;
+    }
+    .theme{
+        display: none;
+    }
+    .theme1{
+        display: block;
+    }
+    .on1{
+        display: none;
     }
 }
